<resources>
    <string name="app_name">Pão de Mel da Fátima</string>

    <!--AdMob -- Testes-->
    <string name="id_admob">ca-app-pub-3940256099942544~3347511713</string>
    <string name="id_propaganda_inter">ca-app-pub-3940256099942544/1033173712</string>

    <string name="menu_clients">Clientes</string>
    <string name="paid">Pago</string>
    <string name="save">Salvar</string>
    <string name="delete">Excluir</string>
    <string name="cancel">Cancelar</string>

    <string name="sales">Vendas</string>
    <string name="debt">Fiado</string>
    <string name="real_formatter">%1$,.2f</string>
    <string name="total_saled">Total vendido: R$ %1$,.2f</string>
    <string name="total_received">Total recebido: R$ %1$,.2f</string>
    <string name="sale_date">Data Venda:</string>
    <string name="send_whats">Enviar Whats</string>
    <string name="pay_debts">Quitar Dívidas</string>
    <string name="privacy">Política de Privacidade</string>

    <string name="hint_name">Nome:</string>
    <string name="hint_phone">Fone:</string>
    <string name="hint_value">Valor:</string>
    <string name="hint_options">Segure para opções!</string>
    <string-array name="years">
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
    </string-array>
    <string-array name="months">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </string-array>

    <string name="message_debt">Olá, só queria lembrar vc de que tem R$ %1$,.2f pendentes devido ao pão de mel.\nQualquer dúvida, entre em contato.</string>
    <string name="message_value">Preencha o valor!</string>
    <string name="message_client">Selecione um cliente!</string>
    <string name="message_contacts">Permita o acesso aos contatos, é necessário para o funcionamento do app.</string>
    <string name="message_press_to_edit">Segure para editar!</string>
    <string name="message_fill_all">Preencha todo os campos!</string>
    <string name="message_paid_all">Dívidas Quitadas!</string>

    <string name="error_whats">Erro ao enviar mensagem. Confira o numero de telefone do contato.</string>

    <string name="description_left">Seta Mês Anterior</string>
    <string name="description_right">Seta Mês seguinte</string>
    <string name="description_photo">Foto do Cliente</string>

</resources>
