<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".view.DebtorOptionsFragment">


    <Button
        android:id="@+id/btn_whats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhats"
        android:text="@string/send_whats"
        android:textColor="@color/primaryTextColor" />

    <Button
        android:id="@+id/btn_paidAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pay_debts" />
    <Button
        android:id="@+id/btn_cancel_quit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"/>
</LinearLayout>