<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".view.EditSaleDialogFragment">


    <EditText
        android:id="@+id/edit_sell_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_value"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/edit_sell_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />


    <EditText
        android:id="@+id/edit_sell_date"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:hint="@string/sale_date"
        android:inputType="none"
        app:layout_constraintBottom_toTopOf="@+id/edit_sell_pay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_sell_value" />

    <CheckBox
        android:id="@+id/edit_sell_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/paid"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/edit_sell_date" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_sell_pay">

        <Button
            android:id="@+id/btn_edit_sell_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="409dp" />

        <Button
            android:id="@+id/btn_edit_sell_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete"
            tools:layout_editor_absoluteX="290dp"
            tools:layout_editor_absoluteY="409dp" />

        <Button
            android:id="@+id/btn_edit_sell_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            tools:layout_editor_absoluteX="195dp"
            tools:layout_editor_absoluteY="409dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="103dp"
        android:layout_height="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/sale_date"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/edit_sell_date"
        app:layout_constraintEnd_toStartOf="@+id/edit_sell_date"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_sell_date"
        app:layout_constraintVertical_bias="0.0" />


</android.support.constraint.ConstraintLayout>